--- a/modules/layout/main.html.header.html
+++ b/modules/layout/main.html.header.html
@@ -17,7 +17,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" onclick="$vm.nav_load_module('website_home');"><i class="fa fa-home"></i> Home</a></li>
                 <li class="nav-item"><a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" onclick="$vm.nav_load_module('main');">CFS-NRS</a></li>
-                <li><a class="nav-link"  name=signinout><i class="fa fa-user"></i> Sign In/Out</a></li>
+                <li><a class="nav-link" onclick="$vm.nav_click_process('vm_signinout');" name="signinout" ><i class="fa fa-user"></i> Sign In/Out</a></li>
             </ul>
 			<form id=form__ID class="form-inline my-2 my-xl-0">
 				<input id=vm_system_search class="form-control mr-sm-2" type="text" placeholder="Search modules..." aria-label="Search modules..." />
@@ -25,7 +25,6 @@
         </div>
     </nav>
     <script>
-			// onclick = "$vm.nav_click_process('vm_signinout');"
         //---------------------------------------------
         if($vm.user=='guest'){
             $('a[name=signinout]').html('<i class="fa fa-user"></i> Sign In')
