--- a/modules/layout/main.html.header.html
+++ b/modules/layout/main.html.header.html
@@ -16,8 +16,9 @@
         <div id="navbars__ID" class="navbar-collapse collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" onclick="$vm.nav_load_module('website_home');"><i class="fa fa-home"></i> Home</a></li>
-                <li class="nav-item"><a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" onclick="$vm.nav_load_module('main');">CFS-NRS</a></li>
-                <li><a class="nav-link" onclick="$vm.nav_click_process('vm_signinout');" name="signinout" ><i class="fa fa-user"></i> Sign In/Out</a></li>
+                <li class="nav-item"><a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" onclick="$vm.nav_load_module('main');">NRS Study</a></li>
+								<li class="nav-item"><a class="nav-link" href="https://wappsystem.github.io/nrs-recruitment/?/home">Recruitment</a></li>
+								<li class="nav-item"><a class="nav-link" onclick="$vm.nav_click_process('vm_signinout');" name="signinout" ><i class="fa fa-user"></i> Sign In/Out</a></li>
             </ul>
 			<form id=form__ID class="form-inline my-2 my-xl-0">
 				<input id=vm_system_search class="form-control mr-sm-2" type="text" placeholder="Search modules..." aria-label="Search modules..." />
